fix: get bottom to overlap onto image

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ code {
 .flex-container {
   display : flex;
   flex-direction: column;
+  width: 100vw;
 }
 
 .initial-image-height {
@@ -54,24 +55,24 @@ code {
 .main-name {
   color: white;
   font-family: 'RobotoMono-Bold';
-  font-size: 3.5vw;
+  font-size: 7vh;
   text-shadow: 2px 2px 50px #000;
-  padding-right : 1vw;
-  padding-left : 1vw;
-  padding-top : 0.5vw;
-  padding-bottom : 0.5vw;
+  padding-right : 1vh;
+  padding-left : 1vh;
+  padding-top : 0.5vh;
+  padding-bottom : 0.5vh;
   background-color: #222529;
 }
 
 .programmer-title {
   color: white;
   font-family: 'RobotoMono-Bold';
-  font-size: 2.5vw;
+  font-size: 5vh;
   text-shadow: 0 0 50px #000;
-  padding-right : 1.2vw;
-  padding-left : 1.2vw;
-  padding-top : 1vw;
-  padding-bottom : 1vw;
+  padding-right : 1.2vh;
+  padding-left : 1.2vh;
+  padding-top : 1vh;
+  padding-bottom : 1vh;
   background-color: #222529;
 }
 
@@ -80,6 +81,21 @@ code {
   top : 35%;
   left : 50%;
   transform : translate(-50%, -50%);
+}
+
+.static-image-position {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  width: 100vw;
+}
+
+.bottom-body {
+  z-index: 1;
+  position: relative;
+  top: 100vh;
+  background-color: white;
 }
 
 .middle{
